<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.geonetwork-opensource</groupId>
  <artifactId>gn-schema-iso19115-3.2018.che</artifactId>
  <version>4.4.9-0.1-SNAPSHOT</version>
  <name>GeoNetwork schema plugin for ISO19115-3:2018 standard</name>

  <properties>
    <xmlunit.version>2.10.0</xmlunit.version>
    <gn.version>4.4.9-0</gn.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.geonetwork-opensource.schemas</groupId>
      <artifactId>gn-schema-core</artifactId>
      <version>${gn.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geonetwork-opensource.schemas</groupId>
      <artifactId>gn-schema-core</artifactId>
      <version>${gn.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.xmlunit</groupId>
      <artifactId>xmlunit-core</artifactId>
      <version>${xmlunit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.xmlunit</groupId>
      <artifactId>xmlunit-matchers</artifactId>
      <version>${xmlunit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.geonetwork-opensource</groupId>
      <artifactId>gn-web-app</artifactId>
      <version>4.4.6-0</version>
      <type>war</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.geonetwork-opensource</groupId>
      <artifactId>gn-web-app</artifactId>
      <version>4.4.6-0</version>
      <classifier>classes</classifier>
      <exclusions>
        <exclusion>
          <!-- Excluded to avoid pulling unused persistence.xml -->
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-jpamodelgen</artifactId>
        </exclusion>
      </exclusions>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.xmlunit</groupId>
      <artifactId>xmlunit-assertj</artifactId>
      <version>2.10.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/config/translations</directory>
        <targetPath>META-INF/catalog/locales</targetPath>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
      </testResource>
      <testResource>
        <directory>src/main/plugin/iso19115-3.2018.che</directory>
        <targetPath>gn-site/WEB-INF/data/config/schema_plugins/iso19115-3.2018.che</targetPath>
      </testResource>
    </testResources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <release>11</release>
          <debug>true</debug>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.5</version>
        <executions>
          <execution>
            <id>test-jar</id>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-dependency-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>unpack</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>unpack</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.geonetwork-opensource</groupId>
                  <artifactId>gn-web-app</artifactId>
                  <version>4.4.6-0</version>
                  <type>war</type>
                  <overWrite>false</overWrite>
                  <outputDirectory>${project.build.testOutputDirectory}/gn-site</outputDirectory>
                  <includes>**/*</includes>
                </artifactItem>
              </artifactItems>
              <overWriteReleases>false</overWriteReleases>
              <overWriteSnapshots>true</overWriteSnapshots>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>sample-data</id>
            <phase>compile</phase>
            <configuration>
              <!-- inline ant build target -->
              <target>
                 <mkdir dir="target/sample-data"/>
                 <defaultexcludes add="**/.DS_Store"/>
                 <zip destfile="target/sample-data/service_record.mef"
                   basedir="src/main/plugin/iso19115-3.2018.che/sample-data/service_record"
                   whenempty="create"
                   excludes="**/.keepme"/>
              </target>
            </configuration>
            <goals><goal>run</goal></goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>plugin-assembly</id>
            <phase>package</phase>
            <goals><goal>single</goal></goals>
            <inherited>false</inherited>
            <configuration>
             <appendAssemblyId>false</appendAssemblyId>
             <descriptors>
              <descriptor>src/assembly/schema-plugin.xml</descriptor>
             </descriptors>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <encoding>UTF-8</encoding>
          <propertiesEncoding>ISO-8859-1</propertiesEncoding>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <repositories>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>osgeo</id>
      <name>OSGeo Release repository</name>
      <url>https://repo.osgeo.org/repository/release/</url>
    </repository>
  </repositories>
</project>
